name: hail
version: 0.0.1
build-type: Simple
cabal-version: >=1.10

library
  build-depends: base >= 4.7 && < 5,
                 bytestring >= 0.10 && < 1,
                 cereal >= 0.5 && < 1,
                 http-types >= 0.9 && < 1,
                 time >= 1.6 && < 2,
                 wai >= 3.2 && < 4,
                 wai-websockets >= 3.0 && < 4,
                 websockets >= 0.10 && < 1
  default-language: Haskell2010
  exposed-modules: Hail.Event, Hail.Listen.WAI, Hail.Protocol, Hail.Reactor
  ghc-options: -Wall
  hs-source-dirs: src

test-suite hail-test
  build-depends: base >= 4.7 && < 5,
                 bytestring >= 0.10 && < 1,
                 cereal >= 0.5 && < 1,
                 hail,
                 hspec >= 2.4 && < 3,
                 QuickCheck >= 2.9 && < 3,
                 time >= 1.6 && < 2
  default-language: Haskell2010
  ghc-options: -Wall
  hs-source-dirs: test
  main-is: Spec.hs
  other-modules: Hail.ProtocolSpec
  type: exitcode-stdio-1.0
